syntax = "proto3";
import "google/protobuf/empty.proto";
package tokens;
option go_package = "tsuwari/grpc/tokens";

service Tokens {
  rpc RequestAppToken(google.protobuf.Empty) returns (Token) {}
  rpc RequestUserToken(GetUserTokenRequest) returns (Token) {}
  rpc RequestBotToken(GetBotTokenRequest) returns (Token) {}
}

message Token {
  string accessToken = 1;
  repeated string scopes = 2;
}

message GetUserTokenRequest {
  string userId = 1;
}

message GetBotTokenRequest {
  string botId = 1;
}
